# narwhal

./: .env  .gitignore  Cargo.toml
benchmark/: fabfile.py  result.txt  settings.json  worker
benchmark/benchmark/: commands.py  instance.py  local.py  logs.py  remote.py  settings.py
eth_sidecar/: Cargo.toml
eth_sidecar/src/: main.rs
node/: Cargo.toml
node/src/: benchmark_client.rs  main.rs  transaction.txt  transactions.txt
primary/src/: core.rs
script/: create_account_modified.py  create_account_reth.py  process_transactions.py  replay_simulated_mempool.py  transaction.txt  wallet_private_keys.json.bad.1766418794
worker/: Cargo.toml
worker/src/: batch_maker.rs  eth_digest.rs  lib.rs  processor.rs  worker.rs  worker_http.rs
