[package]
name = "eth_sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
bincode = "1.3"
hex = "0.4"
tiny-keccak = { version = "2", features = ["keccak"] }
rlp = "0.5"
secp256k1 = { version = "0.28", features = ["recovery"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
generic-array = "1"
