[package]
name = "node"
version = "0.1.0"
authors = ["George Danezis <gdanezis@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
bincode = "1.3.1"
anyhow = "1.0.40"
rand = "0.7.3"
futures = "0.3.15"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json  = "1"
hex         = "0.4"

revm = "33.1.0"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
rlp = "0.6"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"


config = { path = "../config" }
store = { path = "../store" }
crypto = { path = "../crypto" }
primary = { path = "../primary" }
worker = { path = "../worker" }
consensus = { path = "../consensus" }

[features]
benchmark = ["worker/benchmark", "primary/benchmark", "consensus/benchmark"]

[[bin]]         
name = "benchmark_client"   
path = "src/benchmark_client.rs" 
required-features = ["benchmark"] 

